# fpintroduction-bookmovie

./: .gitignore  LICENSE  README.md  bookmovie.cabal  bookmovie.db  seeds.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: bookmovie-0.1.0.0-inplace.conf  package.cache  sqlite-simple-0.4.18.1-inplace.conf
dist-newstyle/src/: sqlite-si_-fde571de1265a6aa.cache
src/: API.hs  App.hs  Handlers.hs  Runner.hs  Server.hs  Utils.hs
src/API/: BatchPreliminary.hs  Checkout.hs  Preliminary.hs  Refund.hs  Stats.hs  Timetable.hs
src/DB/: Booking.hs  Internal.hs  Preliminary.hs  Seat.hs  Timetable.hs
src/DB/DTO/: Booking.hs  Checkout.hs  Refund.hs  Seat.hs  TimeSlot.hs
