cabal-version:       >=1.10

name:                bookmovie
version:             0.1.0.0
license-file:        LICENSE
author:              Evgenii Akentev
maintainer:          i@ak3n.com
build-type:          Simple

library
  exposed-modules:     API
                     , API.Timetable
                     , API.Preliminary
                     , API.Checkout
                     , API.Refund
                     , API.Stats
                     , App
                     , DB.Booking
                     , DB.DTO.Booking
                     , DB.Timetable
                     , DB.DTO.TimeSlot
                     , DB.Seat
                     , DB.DTO.Seat
                     , DB.Preliminary
                     , DB.Internal
                     , DB.DTO.Checkout
                     , DB.DTO.Refund
                     , Runner
                     , Handlers
                     , Server
                     , Utils
  build-depends:       base >=4.14 && <4.15
                     , aeson >= 1.4.7.0
                     , bytestring
                     , mtl >= 2.2.0
                     , stm >= 2.5.0.1
                     , exceptions
                     , servant
                     , servant-server
                     , sqlite-simple == 0.4.18.1
                     , text
                     , http-types
                     , time
                     , transformers
                     , warp
                     , wai
                     , wai-logger
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , TypeOperators
                     , LambdaCase
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , DerivingStrategies
                     , StandaloneDeriving
                     , DerivingVia
                     , RecordWildCards
                     , FlexibleContexts
                     , ConstraintKinds
                     , ScopedTypeVariables
  ghc-options:         -Wall
                       -Werror


executable bookmovie
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
                     , bookmovie
  default-language:    Haskell2010
